Prevent add new list from zooming on ios

--- a/themes/finna2/less/finna/mylist.less
+++ b/themes/finna2/less/finna/mylist.less
@@ -140,6 +140,9 @@
         border-radius: 4px;
         padding-left: 4px;
         border: none;
+        @media (max-width: @screen-sm-max) {
+          font-size: 16px;
+        }
       }
       i {
         cursor: pointer;
